# solve-engine

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
solve_engine/board/: app.py
solve_engine/classify/: classifier.py  llm.py
solve_engine/eval/: golden.jsonl
solve_engine/score/: run.py  store.py
tests/: test_classify_parser.py  test_smoke.py
