[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solve-engine"
version = "0.0.1"
description = "Ticket-triage trainer over live GitHub issues."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["solve_engine"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
